Update release script to update snapshots